fix spacing of breaks

--- a/reviews.css
+++ b/reviews.css
@@ -35,6 +35,6 @@
 /*
 
  */
-.stars {
+#stars img{
     width: 5%;
 }
